--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#9c27b0">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
+asdasd
 <script src="bundle.js"></script>
 </body>
 </html>
